--- a/amon-agent.conf
+++ b/amon-agent.conf
@@ -3,5 +3,10 @@
 		"port":27017,
 		"host":"127.0.0.1"
 	},
-	"server_key": "test"
+	"server_key": "test",
+	"system_check_period":60,
+    "process_checks":[
+        "mongo"
+    ]
+
 }
