--- a/amon-agent.conf
+++ b/amon-agent.conf
@@ -6,7 +6,10 @@
 	"server_key": "test",
 	"system_check_period":60,
     "process_checks":[
-        "mongo"
+        "mongo",
+        "redis",
+        "mysql",
+        "postgres"
     ]
 
 }
