--- a/amon-agent.conf
+++ b/amon-agent.conf
@@ -6,10 +6,7 @@
 	"server_key": "test",
 	"system_check_period":60,
     "process_checks":[
-        "mongo",
-        "redis",
-        "mysql",
-        "postgres"
+        "mongo"
     ]
 
 }
