--- a/amon-agent.conf
+++ b/amon-agent.conf
@@ -5,4 +5,9 @@
 	},
 	"server_key": "test",
 	"system_check_period":60,
+	"plugins": {
+		"nginx": {
+			"status_url": "http://127.0.0.1/status"
+		}
+	}
 }
