--- a/amon-agent.conf
+++ b/amon-agent.conf
@@ -4,10 +4,5 @@
 		"host":"127.0.0.1"
 	},
 	"server_key": "test",
-	"system_check_period":60,
-	"plugins": {
-		"nginx": {
-			"status_url": "http://127.0.0.1/status"
-		}
-	}
+	"system_check_period":60
 }
