Working nginx plugin

--- a/amon-agent.conf
+++ b/amon-agent.conf
@@ -4,5 +4,15 @@
 		"host":"127.0.0.1"
 	},
 	"server_key": "test",
-	"system_check_period":60
+	"system_check_period":60,
+	"plugins": {
+		"apache": {
+			"url": "",
+			"user": "",
+			"password": ""
+		},
+		"nginx": {
+			"url": ""
+		}
+	}
 }
