Agent config updated

--- a/amon-agent.conf
+++ b/amon-agent.conf
@@ -1,18 +1,4 @@
 {
-	"remote":{
-		"port":2464,
-		"host":"127.0.0.1"
-	},
-	"server_key": "test",
-	"system_check_period":60,
-	"plugins": {
-		"apache": {
-			"url": "",
-			"user": "",
-			"password": ""
-		},
-		"nginx": {
-			"url": ""
-		}
-	}
+        "host": "https://amon.cx",
+        "server_key": "test"
 }
