Packaging, docker tests

--- a/packaging/Makefile
+++ b/packaging/Makefile
@@ -4,7 +4,7 @@ SRC=../
 VERSION=`PYTHONPATH=$(SRC) python -c "from amonagent import __version__; print __version__"`
 
 FPM_BUILD=fpm --epoch 1 -s dir -e -C $(BUILD) \
--a all -m "Amon Packages <package@amon.cx>" \
+-a all -m "Amon Packages <packages@amon.cx>" \
 --url "http://amon.cx/" \
 --description "`cat desc`"\
 -v $(VERSION) \
@@ -15,20 +15,9 @@ clean:
 	rm -f *.deb *.rpm
 
 
-# Copy the code to our root directory.
-source:
-	mkdir -p $(AGENT)
-	cp -r $(SRC)/amonagent $(AGENT)/
-	cp -r $(SRC)/*.py $(AGENT)/
-	cp -r $(SRC)/requirements.txt $(AGENT)/
-	cp -r $(SRC)/MANIFEST.in $(AGENT)/
-	find $(AGENT) -name "*.pyc" -exec rm {} \;
-
-
-
 # Layout all of the files common to both versions of the Agent in
 # the build directory.
-install_base: source
+install_base: 
 	mkdir -p $(BUILD)
 	mkdir -p $(BUILD)/etc/amonagent
 	mkdir -p $(BUILD)/etc/amonagent/plugins-enabled
@@ -40,18 +29,16 @@ install_base: source
 
 	mkdir -p $(BUILD)/etc/init.d
 	cp -r $(SRC)/amon-agent $(BUILD)/etc/init.d/amon-agent
+	cp -r $(SRC)/amon-agent.conf $(BUILD)/etc/amon-agent.conf
 	chmod 755 $(BUILD)/etc/init.d/amon-agent
-	python $(AGENT)/setup.py install
+
 	@echo $(VERSION)
 
 
 
 # =====================
-# DEBIAN
+# Ubuntu/Debian
 # =====================
-
-
-
 amon_agent_deb: clean install_base
 	FPM_EDITOR="echo 'Replaces: amon-agent (<= $(VERSION))' >>" \
 $(FPM_BUILD) -t deb \
@@ -61,18 +48,20 @@ $(FPM_BUILD) -t deb \
 -d "python-setuptools" \
 -d "adduser" \
 -d "sysstat" \
---pre-install debian/preinst \
 --post-install debian/postinst \
 --post-uninstall debian/postrm \
 --pre-uninstall  debian/prerm \
 .
 
-
+# =====================
+# CentOS/Fedora
+# =====================
 amon_agent_rpm: clean install_base
 	FPM_EDITOR="echo ''>>"  \
 $(FPM_BUILD) -t rpm \
 -n "amon-agent" \
 -d "python-devel" \
+-d "python-setuptools" \
 -d "sysstat" \
 --conflicts "amon-agent < $(VERSION)" \
 --pre-install	   rpm/preinst \
@@ -81,4 +70,16 @@ $(FPM_BUILD) -t rpm \
 --post-uninstall   rpm/postrm \
 .
 
-all: clean deb rpm
+all: clean amon_agent_deb amon_agent_rpm
+
+
+test_debian:
+	cp debian/Dockerfile Dockerfile
+	docker build . 
+	rm Dockerfile
+
+
+test_rpm:
+	cp rpm/Dockerfile Dockerfile
+	docker build . 
+	rm Dockerfile
