Update dockerfiles and makefile tests

--- a/packaging/Makefile
+++ b/packaging/Makefile
@@ -79,12 +79,14 @@ test_debian:
 
 test_rpm:
 	cp rpm/Dockerfile Dockerfile
-	docker build . 
+	docker build --no-cache . 
 	rm Dockerfile
+
+test_all: test_debian test_rpm
 
 test_debian_repo:
 	cp debian/Dockerfile.repo Dockerfile
-	docker build .
+	docker build --no-cache . 
 	rm Dockerfile
 
 
