--- a/packaging/rpm/Dockerfile.repo
+++ b/packaging/rpm/Dockerfile.repo
@@ -6,6 +6,7 @@ ADD amon.repo /etc/yum.repos.d/amon.repo
 RUN yum -t -y install amon-agent
 
 RUN /etc/init.d/amon-agent status
-RUN /etc/init.d/amon-agent plugins
+RUN /etc/init.d/amon-agent test_collectors
+RUN /etc/init.d/amon-agent test_plugins
 
 CMD ["/bin/bash"]
