--- a/packaging/debian/Dockerfile
+++ b/packaging/debian/Dockerfile
@@ -7,12 +7,13 @@ RUN echo 'deb http://bg.archive.ubuntu.com/ubuntu precise main universe' > /etc/
 
 
 RUN apt-get install -y gdebi-core
-ADD amon-agent_1.2_all.deb var/agent.deb
+ADD amon-agent_1.3.1_all.deb var/agent.deb
 
 RUN gdebi -n /var/agent.deb
 
 RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
 RUN /etc/init.d/amon-agent test_plugins
+RUN ls -lh /etc/amonagent/plugins
 
 CMD ["/bin/bash"]
