--- a/packaging/Makefile
+++ b/packaging/Makefile
@@ -30,6 +30,9 @@ install_base:
 	mkdir -p $(BUILD)/etc/init.d
 	cp -r $(SRC)/amon-agent $(BUILD)/etc/init.d/amon-agent
 	cp -r $(SRC)/amon-agent.conf $(BUILD)/etc/amon-agent.conf
+	cp -r /etc/amonagent/plugins $(BUILD)/etc/amonagent
+	rm -rf  $(BUILD)/etc/amonagent/plugins/.git
+	find $(BUILD)/etc/amonagent/ -type f -name "*.pyc" -exec rm -f {} \;
 	chmod 755 $(BUILD)/etc/init.d/amon-agent
 
 	@echo $(VERSION)
