--- a/packaging/rpm/Dockerfile
+++ b/packaging/rpm/Dockerfile
@@ -1,12 +1,13 @@
 FROM centos:latest
 MAINTAINER Martin Rusev
 
-ADD amon-agent-1.2-1.noarch.rpm var/agent.rpm
+ADD amon-agent-1.3.1-1.noarch.rpm var/agent.rpm
 
 RUN yum -t -y install /var/agent.rpm
 
 RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
 RUN /etc/init.d/amon-agent test_plugins
+RUN ls -lh /etc/amonagent/plugins
 
 CMD ["/bin/bash"]
