--- a/packaging/rpm/Dockerfile.repo
+++ b/packaging/rpm/Dockerfile.repo
@@ -8,5 +8,6 @@ RUN yum -t -y install amon-agent
 RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
 RUN /etc/init.d/amon-agent test_plugins
+RUN ls -lh /etc/amonagent/plugins
 
 CMD ["/bin/bash"]
