--- a/packaging/debian/Dockerfile.repo
+++ b/packaging/debian/Dockerfile.repo
@@ -4,8 +4,8 @@ MAINTAINER Martin Rusev
 
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv AD53961F
 
-RUN echo 'deb http://bg.archive.ubuntu.com/ubuntu precise main universe' > /etc/apt/sources.list && \
-    echo 'deb http://bg.archive.ubuntu.com/ubuntu precise-updates universe' >> /etc/apt/sources.list
+RUN echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty main universe' > /etc/apt/sources.list && \
+    echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty-updates universe' >> /etc/apt/sources.list
 
 RUN echo 'deb http://packages.amon.cx/repo amon contrib' >> /etc/apt/sources.list
 RUN apt-get update
@@ -16,11 +16,5 @@ RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
 RUN /etc/init.d/amon-agent test_plugins
 RUN ls -lh /etc/amonagent/plugins
-RUN groups amonagent
-RUN addgroup amonagent
-RUN adduser amonagent amonagent
-RUN  chown amonagent:amonagent /etc/init.d/amon-agent
-RUN /etc/init.d/amon-agent restart
-RUN ps aux | grep amon-agent
 
 CMD ["/bin/bash"]
