--- a/packaging/rpm/Dockerfile
+++ b/packaging/rpm/Dockerfile
@@ -1,9 +1,11 @@
 FROM centos:latest
 MAINTAINER Martin Rusev
 
-ADD amon-agent-1.3.1-1.noarch.rpm var/agent.rpm
+ADD amon-agent-1.5-1.noarch.rpm var/agent.rpm
 
 RUN yum -t -y install /var/agent.rpm
+
+RUN yum -y install openssh-server openssh-clients
 
 RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
