Remove ansible dependecies, install seperately

--- a/packaging/rpm/Dockerfile
+++ b/packaging/rpm/Dockerfile
@@ -3,7 +3,9 @@ MAINTAINER Martin Rusev
 
 ADD amon-agent-1.5-1.noarch.rpm var/agent.rpm
 
-RUN yum -y install openssh-server openssh-clients 
+RUN wget http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
+RUN rpm -Uvh epel-release-6*.rpm
+RUN yum -y install ansible
 RUN yum -t -y install /var/agent.rpm
 
 
