--- a/packaging/debian/Dockerfile.repo
+++ b/packaging/debian/Dockerfile.repo
@@ -7,7 +7,7 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv AD53961F
 RUN echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty main universe' > /etc/apt/sources.list && \
     echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty-updates universe' >> /etc/apt/sources.list
 
-RUN echo 'deb http://packages.amon.cx/repo amon contrib' >> /etc/apt/sources.list
+RUN echo 'deb http://beta.packages.amon.cx/repo amon contrib' >> /etc/apt/sources.list
 RUN apt-get update
 
 RUN apt-get install -y --force-yes amon-agent
