--- a/packaging/rpm/Dockerfile.repo
+++ b/packaging/rpm/Dockerfile.repo
@@ -1,5 +1,4 @@
-FROM centos:latest
-MAINTAINER Martin Rusev
+FROM martinrusev/centos:latest
 
 ADD amon.repo /etc/yum.repos.d/amon.repo
 
@@ -8,6 +7,6 @@ RUN yum -t -y install amon-agent
 RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
 RUN /etc/init.d/amon-agent test_plugins
-RUN ls -lh /etc/amonagent/plugins
+
 
 CMD ["/bin/bash"]
