API check, makefile updates

--- a/packaging/debian/Dockerfile.repo
+++ b/packaging/debian/Dockerfile.repo
@@ -1,11 +1,4 @@
-FROM ubuntu:latest
-MAINTAINER Martin Rusev
-
-
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv AD53961F
-
-RUN echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty main universe' > /etc/apt/sources.list && \
-    echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty-updates universe' >> /etc/apt/sources.list
+FROM amonbase:latest
 
 RUN echo 'deb http://beta.packages.amon.cx/repo amon contrib' >> /etc/apt/sources.list
 RUN apt-get update
@@ -16,5 +9,7 @@ RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
 RUN /etc/init.d/amon-agent test_plugins
 RUN ls -lh /etc/amonagent/plugins
+
+RUN /etc/init.d/amon-agent install apache
 
 CMD ["/bin/bash"]
