--- a/packaging/debian/Dockerfile
+++ b/packaging/debian/Dockerfile
@@ -1,18 +1,14 @@
-FROM ubuntu:latest
-MAINTAINER Martin Rusev
+FROM amonbase:latest
 
-RUN echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty main universe' > /etc/apt/sources.list && \
-    echo 'deb http://bg.archive.ubuntu.com/ubuntu trusty-updates universe' >> /etc/apt/sources.list && \
-    apt-get update
 
 RUN apt-get install -y gdebi-core
-ADD amon-agent_1.5_all.deb var/agent.deb
+ADD amon-agent_1.5.2_all.deb var/agent.deb
 
 RUN gdebi -n /var/agent.deb
 
 RUN /etc/init.d/amon-agent status
-RUN /etc/init.d/amon-agent test_collectors
-RUN /etc/init.d/amon-agent test_plugins
-RUN ls -lh /etc/amonagent/plugins
+
+RUN amonpm install boo
+RUN amonpm update
 
 CMD ["/bin/bash"]
