--- a/packaging/debian/Dockerfile.repo
+++ b/packaging/debian/Dockerfile.repo
@@ -7,9 +7,10 @@ RUN apt-get install -y --force-yes amon-agent
 
 RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test_collectors
-RUN /etc/init.d/amon-agent test_plugins
-RUN ls -lh /etc/amonagent/plugins
 
-RUN /etc/init.d/amon-agent install apache
+
+RUN amonpm install boo
+RUN amonpm update
+
 
 CMD ["/bin/bash"]
