--- a/packaging/debian/Dockerfile.beta.repo
+++ b/packaging/debian/Dockerfile.beta.repo
@@ -6,7 +6,7 @@ RUN apt-get update
 RUN apt-get install -y --force-yes amon-agent
 
 RUN /etc/init.d/amon-agent status
-RUN /etc/init.d/amon-agent test_collectors
+RUN /etc/init.d/amon-agent test
 
 
 RUN amonpm install boo
