--- a/tests/agent-test.conf
+++ b/tests/agent-test.conf
@@ -1,7 +1,5 @@
 {
 	"server_key": "test",
-	"logfile": "/home/martin/temp/amonagent.log",
-	"check_period": 5,
-	"host": "http://localhost",
-	"plugins_path": "/home/martin/amon-plugins"
+	"system_check_period": 5,
+	"host": "http://localhost"
 }
