--- a/packaging/debian/Dockerfile.beta.repo
+++ b/packaging/debian/Dockerfile.beta.repo
@@ -17,4 +17,11 @@ RUN apt-get install -y --force-yes amon-agent
 RUN /etc/init.d/amon-agent status
 RUN /etc/init.d/amon-agent test
 
+
+RUN apt-get install -y --force-yes amon-agent
+
+
+RUN apt-get remove -y amon-agent
+RUN apt-get install -y --force-yes amon-agent
+
 CMD ["/bin/bash"]
