--- a/packaging/debian/Dockerfile
+++ b/packaging/debian/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu:latest
 
+RUN apt-get update
 RUN apt-get install -y gdebi-core
-ADD amon-agent_2.1_all.deb var/agent.deb
+ADD AMON_DEB_FILE var/agent.deb
 
 RUN gdebi -n /var/agent.deb
 
