--- a/packaging/rpm/Dockerfile
+++ b/packaging/rpm/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:latest
 # ENV GIT_CURL_VERBOSE 1
 
-ADD amon-agent-2.1-1.noarch.rpm var/agent.rpm
+ADD AMON_RPM_FILE var/agent.rpm
 
 RUN yum -t -y install /var/agent.rpm
 
