--- a/deployment/ansible/Dockerfile.ubuntu
+++ b/deployment/ansible/Dockerfile.ubuntu
@@ -1,5 +1,4 @@
-FROM williamyeh/ansible:centos7
-# FROM williamyeh/ansible:ubuntu14.04
+FROM williamyeh/ansible:ubuntu14.04
 
 WORKDIR /tmp
 COPY  ansible  /tmp
